<resources>
    <string name="app_name">ArcadeFinder</string>
    <string name="register_here"><u>Register Here.</u></string>
    <string name="not_registered">Not registered?</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="tvUsername">TextView</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="or_continue_as_guest"><u>Or continue as guest.</u></string>
    <string name="you_are_a_guest_log_in_to_see_your_profile">You are a guest. Log in to see your profileModel and create requests!</string>
    <string name="hours"><u>Click for More Info</u></string>
    <string name="preference_file_key">preferences</string>
    <string name="radius">Radius</string>
    <string name="game_title">Game Title</string>
    <string name="report">Report</string>
    <string-array name="radii">
        <item>5 mi</item>
        <item>10 mi</item>
        <item>20 mi</item>
        <item>50 mi</item>
        <item>100 mi</item>
        <item>250 mi</item>
        <item>500 mi</item>
        <item>1000 mi</item>
    </string-array>
</resources>